--- a/stocks_app/templates/new_stock.html
+++ b/stocks_app/templates/new_stock.html
@@ -7,8 +7,25 @@
   <fieldset>
     <legend>Please enter the stock's information:</legend>
 
-    {{ form.name.label }} {{ form.name }} {{ form.desc.label }} {{ form.desc }}
-    {{ form.value.label }} {{ form.value }} {{ form.submit }}
+    {{ form.name.label }} {{ form.name }}
+    <ul>
+      {% for error in form.password.errors %}
+      <li class="error">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {{ form.desc.label }} {{ form.desc }}
+    <ul>
+      {% for error in form.password.errors %}
+      <li class="error">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {{ form.value.label }} {{ form.value }}
+    <ul>
+      {% for error in form.password.errors %}
+      <li class="error">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {{ form.submit }}
   </fieldset>
 </form>
 
